# MarkItUp-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: sample.md
markitup/: __init__.py  api.py  fonts.py  render_docx.py  render_html.py  render_pdf.py  stamp.py  theme.py
markitup_py-0.3.0/: README.md  pyproject.toml
markitup_py-0.3.0/markitup/: __init__.py  cli.py  fonts.py  render_docx.py  render_html.py  render_pdf.py  theme.py
markitup_py-0.4.1/: README.md
markitup_py-0.4.1/markitup/: api.py  cli.py  ir.py  parse.py  render_docx.py  theme.py
markitup_py-0.4.1/markitup/themes/: academic.yaml  report.yaml
samples/: academic-paper.md  business-proposal.md  convert_all.py  legal-contract.md  sample.ipynb  technical-report.md
